--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList">Tomato</li>
+		<li data-ns-test="shoppingList">kumro</li>
+		<li data-ns-test="shoppingList">Potol</li>
+	</ol>
+	<ul>
+		<li data-ns-test="holidayList">Tomato, dharos</li>
+		<li data-ns-test="holidayList">kumro, saban</li>
+		<li data-ns-test="holidayList">Potol, chironi</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
